[package]
name = "tangent-core"
version = "0.1.0"
authors = ["Tangent Innovation <tangentinno@gmail.com>", "Austin Mullins <austinmullins9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.2"
diesel = { version = "1.4.4", features = ["postgres"] }
tokio = { version = "0.3.4", features = ["full"] }
termcolor = "1.1.2"
json = "0.12.4"
lazy_static = "1.4.0"